Many changes were added to pesto.html
Added Image
Added Ingredient list
Added Steps

--- a/recipes/pesto.html
+++ b/recipes/pesto.html
@@ -8,5 +8,23 @@
 </head>
 <body>
     <h1>Pesto</h1>
-</body>
+    <img src="https://www.seriouseats.com/thmb/G5vpQw2SVCP4DBBFKVhUW0tXsvU=/1500x1125/filters:fill(auto,1)/__opt__aboutcom__coeus__resources__content_migration__serious_eats__seriouseats.com__recipes__images__2016__02__20160209-finishing-pasta-pesto-vicky-wasik-8-2-ef92adeced95462b8a8871aec7e163e8.jpg" alt="Pesto" height="500" width="700">
+    <p>In this recipie we are creating such a defined masterpiece. This masterpiece is called "Pesto".</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2 cups fresh basil leaves (no stems)</li>
+        <li>2 tablespoons pine nuts or walnuts</li>
+        <li>2 large cloves garlic</li>
+        <li>½ cup extra-virgin olive oil</li>
+        <li>½ cup freshly grated parmesan cheese</li>
+    </ul>
+       
+    <h2>Steps</h2>
+    <ol>
+        <li>Combine basil leaves, pine nuts or walnuts and garlic in a food processor and process until very finely minced.</li>
+        <li>With the machine running slowly dribble in the oil and process until the mixture is smooth.</li>
+        <li>Add the cheese and process very briefly, just long enough to combine. Store in refrigerator or freezer.</li>
+    </ol>
+    </body>
 </html>
