--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ol>
+        <li><a href="recipes/pesto.html">Pesto</a></li>
+        <li><a href="recipes/cheese.html">Mac n cheese</a></li>
+        <li><a href="recipes/ravioli.html">Baked Ravioli</a></li>
+
+    </ol>
 </body>
 </html>
